*should: make configurable (through Java and C++) the timeout for control queries
*could: dnssd client auto connect/reconnect
*could: dnssd client has a list of expected servers
*could: Service isa ServiceProxy!
*should: see Socket. keepAlive

http://gforge.inria.fr/tracker/?atid=1526&group_id=363&func=browse

REMOVE: "Unknown Bip Connector io"


!!! a service video started on prometheus /loc.../svbugdiscovery rev. 5096
p   omiscid                         - Object Oriented Opensource Middleware for 
i   omiscid-avahi-debug             - OMiSCID libraries (using avahi).          Version : 1.5.0
i   omiscid-dev                     - OMiSCID Headers and Dev files             
p   omiscid-ext                     - Extension for the OMiSCID middleware inclu
p   omiscid-ext-dev                 - OMiSCID Extension development files       
!!! is visible with omiscidgui using mdns but not using jive

1.
r
added missing synchronized to ServiceImpl#connectTo
TODO review synchro here isInitMessageReceived
TODO ==> review all synchro (at least in MessageSocket)
TODO +add test for these failing stuffs
TODO check usage of XmlUtils.generateCDataSection (and fix it if contains ]]>)

1.5.0
r4950
        fix:  trying to send message (or reply message) through a input connector now properly throws an exception
        fix:  service disapparitions were properly notified but browsing with a new service repository caused disappeared services to be reported as present
        fix:  some corner case problems with connection notifications and early message sending that appeared with the removal of castor-xml
        fix: connector listeners now receive "connected" notifications even when connections are initiated locally (this behavior may be subject to discussion, please contact us in case you'd rather have the opposite to happen)